--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,7 @@
     <title>Hello Typescript</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="root"></div>
     <script type="module" src="../index.ts"></script>
   </body>
 </html>
