--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div class="root"></div>
-    <script type="module" src="../index.ts"></script>
+    <script type="module" src="../index.ts" defer></script>
   </body>
 </html>
